--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /out
 /build
 /target
+/.vscode
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
@@ -27,3 +28,4 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+backend/src/main/resources/application.properties
