--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,8 +40,5 @@
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
   "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "react-router-dom": "^6.2.2"
-  }
+  "license": "ISC"
 }
