--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reach/combobox": "^0.16.5",
+    "@react-google-maps/api": "^2.8.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -12,6 +14,7 @@
     "react-axios": "^2.0.5",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "use-places-autocomplete": "^2.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
