--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@popperjs/core": "^2.11.5",
     "@reach/combobox": "^0.16.5",
     "@react-google-maps/api": "^2.8.1",
     "@testing-library/jest-dom": "^5.16.1",
