--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
     "react-axios": "^2.0.5",
+    "react-bootstrap": "^2.2.3",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "use-places-autocomplete": "^2.0.0",
