--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react-axios": "^2.0.5",
     "react-bootstrap": "^2.2.3",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
     "use-places-autocomplete": "^2.0.0",
     "web-vitals": "^2.1.4"
