--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@material-ui/core": "^4.12.4",
+    "@mui/icons-material": "^5.6.1",
+    "@mui/material": "^5.6.2",
     "@popperjs/core": "^2.11.5",
+    "@progress/kendo-react-dropdowns": "^5.2.0",
     "@reach/combobox": "^0.16.5",
     "@react-google-maps/api": "^2.8.1",
     "@testing-library/jest-dom": "^5.16.1",
@@ -11,12 +17,14 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
+    "multiselect-react-dropdown": "^2.0.21",
     "react": "^17.0.2",
     "react-axios": "^2.0.5",
     "react-bootstrap": "^2.2.3",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
+    "react-select": "^5.3.0",
     "use-places-autocomplete": "^2.0.0",
     "web-vitals": "^2.1.4"
   },
