--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,9 +6,8 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@material-ui/core": "^4.12.4",
-    "@mui/icons-material": "^5.6.2",
+    "@mui/icons-material": "^5.6.1",
     "@mui/material": "^5.6.2",
-    "@mui/styled-engine": "^5.6.1",
     "@popperjs/core": "^2.11.5",
     "@progress/kendo-react-dropdowns": "^5.2.0",
     "@reach/combobox": "^0.16.5",
@@ -24,6 +23,7 @@
     "react-bootstrap": "^2.2.3",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-select": "^5.3.0",
     "use-places-autocomplete": "^2.0.0",
@@ -56,8 +56,5 @@
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
   "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "react-router-dom": "^6.2.2"
-  }
+  "license": "ISC"
 }
